--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,7 +234,7 @@
     <string name="ownership">Ownership(%)</string>
     <string name="beneficialnreach">Please add an additional beneficial owner below to\nreach 51%</string>
 
-    <string name="dba_name">Hi! [DBA Name]</string>
+    <string name="dba_name">Hi! %1$s</string>
     <string name="MerchantBalance">Merchant Balance</string>
     <string name="processing_volume">Processing Volume</string>
     <string name="lastmonth">Last Month</string>
