--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -319,4 +319,5 @@
     <string name="business_token_account">Business Token Account</string>
     <string name="available_balance">Available Balance 99.00 CYN</string>
     <string name="receive_payment">Receive Payment</string>
+    <string name="first_name">First Name</string>
 </resources>
