Fee API Changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -322,20 +322,47 @@
     <string name="send_to">Send to</string>
     <string name="business_token_account">Business Token Account</string>
     <string name="available_balance">Available Balance 99.00 CYN</string>
+    <string name="decline_reserve_rules">Decline Reserve Rules?</string>
+    <string name="no_go_back">No, go back</string>
+    <string name="verification_failed">Verification Failed</string>
+    <string name="dear_name">Dear <b>[Name],</b></string>
+    <string name="legal_name_name">Legal Name:<b>[name]</b></string>
+    <string name="dba_dba">DBA: <b>[DBA]</b></string>
+    <string name="documents_required">Documents Required</string>
+    <string name="copy_of_social_security_card">Copy of Social Security card</string>
+    <string name="upload_file">Upload File</string>
+    <string name="fictitious_business_license">Fictitious Business License</string>
+    <string name="website_revisions_required">Website Revisions Required</string>
+    <string name="information_revisions">Information Revisions</string>
+    <string name="please_accept_or_decline_the_revision_suggestion">Please accept or decline the revision suggestion</string>
+    <string name="company_name">Company Name</string>
+    <string name="original">(Original)</string>
+    <string name="prestige_worldwide_inc">Prestige Worldwide Inc</string>
+    <string name="edited">(Edited)</string>
+    <string name="lorem_ipsum_dolor_sit_amet_consectetuer_adipiscing_elit_aenean_commodo_ligula_eget_dolor_aenean_massa">“Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. ”</string>
+    <string name="prestige_worldwide">Prestige Worldwide</string>
+    <string name="transaction_details">Transaction Details</string>
+    <string name="canceled_bank_withdraw">Canceled Bank withdraw</string>
+    <string name="_100_00">100.00</string>
+    <string name="cyn">CYN</string>
+    <string name="_1d3hsm734h"><u>1d3hsM734h…</u></string>
+    <color name="background_color">#8ef2f5f8</color>
+    <string name="rolling_reserves_with_a_rolling_reserve"><b>ROLLING RESERVES:</b> With a rolling reserve</string>
+    <string name="manually_reserves"><b>MANUALLY RESERVES:</b> Withdrawing money</string>
+
+
     <string name="buy_tokens_signet">Buy Tokens - Signet</string>
     <string name="descriptor_name">Descriptor Name</string>
     <string name="deposit_id">Deposit ID</string>
     <string name="reference_id">Reference ID</string>
     <string name="signet_wallet_id">Signet Wallet ID</string>
     <string name="name_on_account">Name on Account</string>
-    <string name="cyn">CYN</string>
     <string name="status">Status</string>
     <string name="completed">Completed</string>
     <string name="date_amp_time"><![CDATA[Date & Time]]></string>
     <string name="purchase_amount">Purchase Amount</string>
     <string name="processing_fee">Processing Fee</string>
     <string name="total_amount">Total Amount</string>
-    <string name="transaction_details">Transaction Details</string>
     <string name="failed_reason">Failed Reason</string>
     <string name="add_the_reason_code_from_signature_bank">[add the reason code from Signature Bank]</string>
     <string name="withdraw_id">Withdraw ID</string>
