--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -349,6 +349,10 @@
     <color name="background_color">#8ef2f5f8</color>
     <string name="rolling_reserves_with_a_rolling_reserve"><b>ROLLING RESERVES:</b> With a rolling reserve</string>
     <string name="manually_reserves"><b>MANUALLY RESERVES:</b> Withdrawing money</string>
+    <string name="new_company">New Company</string>
+    <string name="new_dba">New DBA</string>
+    <string name="add_dba">Add DBA</string>
+    <string name="open_new_account">Open New Account</string>
 
 
     <string name="buy_tokens_signet">Buy Tokens - Signet</string>
@@ -424,4 +428,5 @@
     <string name="enter_the_amount">Enter the amount</string>
     <string name="set_amount">Set Amount</string>
     <string name="clear_amount">Clear Amount</string>
+    <string name="additional_action_required">Additional Action Required</string>
 </resources>
