--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,9 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="chpwdmsg">Looks like it’s time to update your password. For security purposes, we need you to to update your old password.</string>
-
+    <string name="user">User</string>
+    <string name="personal">Personal</string>
+    <string name="business">Business</string>
     <string name="retrieveemailcontent">To help you retrieve your email, we will\n need your help. Please enter the\n information below.</string>
     <string name="firstName">First Name</string>
     <string name="lastName">Last Name</string>
