Dashboard Account Changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -429,4 +429,14 @@
     <string name="set_amount">Set Amount</string>
     <string name="clear_amount">Clear Amount</string>
     <string name="additional_action_required">Additional Action Required</string>
+    <string name="reference_id_name">Reference ID.</string>
+    <string name="pending">Pending</string>
+    <string name="you_have_no_transactions">You have no transactions</string>
+    <string name="load_more">Load More</string>
+    <string name="you_have_no_more_transactions">You have no more transactions</string>
+    <string name="close_button">close Button</string>
+    <string name="search_button">search_button</string>
+    <string name="filter_button">filter Button</string>
+    <string name="total_available_funds">Total Available Funds</string>
+    <string name="recent_token_transactions">Recent Token Transactions</string>
 </resources>
