Business Application Pending flow done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,9 +108,9 @@
     <string name="iv_success_content">Thank you for verifying your identification and trusting us as your token account platform. Lastly, add a payment method to your account profile.</string>
 
     <string name="iv_failed">Identity Verification Failed</string>
-    <string name="iv_failedcontent">Thank you for your interest in coyni. However, we regret to inform you that your application has not been approved and is no longer in consideration.</string>
+    <string name="iv_verification_failed_content">Thank you for your interest in coyni. Please contact coyni customer support if you need further assistance.</string>
     <string name="iv_failedcontentextention"> If you need any help please</string>
-    <string name="iv_failedcontactex"><u>Contact Us</u></string>
+    <string name="contactus"><u>Contact Us</u></string>
 
     <string name="exit">Exit</string>
     <string name="bank_account">Bank Account</string>
@@ -355,7 +355,7 @@
     <string name="new_dba">New DBA</string>
     <string name="add_dba">Add DBA</string>
     <string name="open_new_account">Open New Account</string>
-
+    <string name="application_cancelled_message">Thank you for your interest in merchant processing through coyni. Hope to see you again </string>
 
     <string name="buy_tokens_signet">Buy Tokens - Signet</string>
     <string name="descriptor_name">Descriptor Name</string>
@@ -445,8 +445,9 @@
     <string name="set_amount">Set Amount</string>
     <string name="clear_amount">Clear Amount</string>
     <string name="additional_action_required">Additional Action Required</string>
-
-
+    <string name="identity_review_cancel_message">Thank you for your submission to the coyni review team. No additional information needed at this time. Please check back here for updates. If you wish to cancel your merchant application  click here</string>
+    <string name="cancel_application">Cancel Application</string>
+    <string name="cancel_application_message">Are you sure to cancel your merchant application?</string>
     <string name="today_current_batch">Today(Current batch)</string>
     <string name="yesterday">Yesterday</string>
     <string name="month_to_date">Month to Date(MTD)</string>
