--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -561,4 +561,6 @@
 
     <string name="email_error_warning">User already exists. Try a new email or log in.</string>
     <string name="phone_number_error_warning">User already exists. Try a new phone number or log in.</string>
+    <string name="phone">Phone Number</string>
+    <string name="phone_curr">Current Phone Number</string>
 </resources>
