--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -583,5 +583,6 @@
     <string name="move_button">move Button</string>
 
     <string name="companyemail">Company’s Email</string>
+    <string name="bankdeletemsg">Are you sure you want to delete bank account? To submit the application you have to have at least 1 bank account. Or use the button below to relink.</string>
 
 </resources>
