--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -573,6 +573,7 @@
     <string name="password">Password</string>
 
     <string name="ownership_percentage">\% Ownership"</string>
+    <string name="ownership_title">Ownership"</string>
     <string name="primary">Primary</string>
     <string name="arrow_right">ArrowRight</string>
 
