review application bug fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,6 +176,7 @@
     <string name="learn_more1"> <u>Learn More</u></string>
     <string name="learn"><u>Learn More</u></string>
     <string name="privay_policy"><u>Privay Policy</u></string>
+    <string name="termsservice"><u> Terms of Service</u></string>
 
     <string name="EST">Eastern (EST)</string>
     <string name="CST">Central (CST)</string>
