API Removed me/profile/wallets ScanActivity CustomerProfileActivity.java 28 files Modified added new API wallet details 2 new Files Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -584,5 +584,7 @@
 
     <string name="companyemail">Company’s Email</string>
     <string name="bankdeletemsg">Are you sure you want to delete bank account? To submit the application you have to have at least 1 bank account. Or use the button below to relink.</string>
+    <string name="pay_to_merchant">Pay to Merchant</string>
+    <string name="account_address">Account Address</string>
 
 </resources>
