"Changes Added in Company Information and Beneficial Owners"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,6 +198,9 @@
     <string name="bank_delete_keep">Keep</string>
     <string name="bank_delete_title">Delete Bank Account</string>
 
+    <string name="email_updated">Email Updated</string>
+    <string name="phone_number_updated">Phone number updated</string>
+
     <string name="currency">CYN</string>
     <string name="edit"><u>Edit</u></string>
     <string name="reference_id_hyper"><u>[Reference ID (hyper</u></string>
