Customer Bug Fix 16/03/2022

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,7 +162,7 @@
     <string name="cp_agreements">Agreements</string>
     <string name="cpactive_agreements">Active Agreements</string>
     <string name="privacyv202">Privacy Policy v2.0.2</string>
-    <string name="tos">Terms of Service v2.3.3</string>
+    <string name="tos">Terms of Service</string>
     <string name="usdcurrency">USD</string>
     <string name="pastagree">Past Agreements</string>
     <string name="contact_us"><u>Contact Us</u></string>
