--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -608,5 +608,16 @@
     <string name="pre_authorization">Pre-Authorization</string>
     <string name="preauth_description">A temporary hold was placed on your card and will be removed by the end of this verification process. Please check your Bank/Card statement for a charge from [Descriptor Name] and enter the amount below.</string>
     <string name="incorrect_amount_1_attempt_left">Incorrect amount, 1 attempt left</string>
+    <string name="please_check_the_box_if_you_completed_a_task">Please check the box if you completed a task</string>
+    <string name="footer_full_legal_name_as_it"><b>FOOTER</b> - Full Legal name (as it </string>
+    <string name="Footer">appears in the Articles of \nIncorporation), address, customer \nservice phone number and email \naddress. The bank requires that the full \ncompany address including country (no \nabbreviations) is listed on the website. - \nMust be visible in ALL pages.</string>
+    <string name="terms_remove_opt_in_and_opt_out"><b>TERMS</b> - Remove OPT-IN and OPT-OUT</string>
+    <string name="Terms">sections as this is prohibited to be used \nby third parties.</string>
+    <string name="proof_of_ownership_should_be"><b>Proof of ownership </b>- should be</string>
+    <string name="ProofOfOwnership">provided (Whois-registration; or invoice \nplus screenshot from web hosting \nbackend) Applying Company should \nown the URL(s).</string>
+    <string name="please_upload_required_documents_below">Please upload required documents below</string>
+    <string name="Decline">Declined by applicant on Date due to :</string>
+    <string name="Accepted">Accepted by applicant on</string>
+
 
 </resources>
