--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -380,7 +380,7 @@
     <string name="transaction_details">Transaction Details</string>
     <string name="canceled_bank_withdraw">Canceled Bank withdraw</string>
     <string name="_100_00">100.00</string>
-    <string name="cyn">CYN</string>
+    <string name="cyn">(CYN)</string>
     <string name="_1d3hsm734h"><u>1d3hsM734h…</u></string>
     <color name="background_color">#8ef2f5f8</color>
     <string name="rolling_reserves_with_a_rolling_reserve"><b>ROLLING RESERVES:</b> With a rolling reserve</string>
