--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,7 +198,7 @@
     <string name="bank_delete_keep">Keep</string>
     <string name="bank_delete_title">Delete Bank Account</string>
 
-    <string name="email_updated">Email Updated</string>
+    <string name="email_updated">Email updated</string>
     <string name="phone_number_updated">Phone number updated</string>
 
     <string name="currency">CYN</string>
