--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="businessProfileAccountItemImage">Business Profile account Profile Image</string>
     <string name="businessProfileAccountExpandDownArrow">Business Profile account Profile Expand Down Arrow</string>
 
+    <string name="transAmountAlert">From Amount\' should not be greater than \'To Amount</string>
 
     <string name="identity">Identity Verification</string>
     <string name="MaillingAddress">Mailing Address</string>
