--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,7 +283,7 @@
     <string name="businesstoken">Business Token</string>
     <string name="ac">Account.</string>
     <string name="outAt">out at.</string>
-    <string name="nextpayout"> Next Payout.</string>
+    <string name="nextpayout"> Next Payout</string>
     <string name="lastpayout"> Last Payout</string>
     <string name="batchnow"> Batch Now</string>
     <string name="manual"> Manual</string>
@@ -634,5 +634,6 @@
     <string name="amount_released">Amount Released</string>
     <string name="canceled_description">Release Scheduled for <b>%s</b> for the amount of<b> %s CYN</b> has been canceled due to lack of funds in the reserve balance.</string>
     <string name="scheduled_release_has_been_canceled">Scheduled Release Has Been Canceled</string>
+    <string name="time">11:59pm</string>
 
 </resources>
