--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -635,5 +635,6 @@
     <string name="canceled_description">Release Scheduled for %s for the amount of %s has been canceled due to lack of funds in the reserve balance.</string>
     <string name="scheduled_release_has_been_canceled">Scheduled Release Has Been Canceled</string>
     <string name="time">11:59pm</string>
+    <string name="sales_orders">Sales Orders</string>
 
 </resources>
