--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -639,5 +639,10 @@
     <string name="signet">Signet</string>
     <string name="withdraw_tokens">Withdraw Tokens</string>
     <string name="cyn_under_payout">(CYN)</string>
+    <string name="account_balance">Account Balance</string>
+    <string name="merchant_account_id">Merchant Account ID</string>
+    <string name="dba_name_text">DBA Name</string>
+    <string name="customer_service_phone">Customer Service Phone</string>
+    <string name="description">If you are experiencing any issues with your transaction please contact the merchant on file or contact “coyni” customer service by click</string>
 
 </resources>
